--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,6 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     //immersionbar
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
+    //dialog
+    implementation 'com.afollestad.material-dialogs:bottomsheets:3.2.1'
 }
