--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.input.InputActivity"></activity>
+        <activity android:name=".ui.activity.edit.EditActivity"></activity>
+        <activity android:name=".ui.activity.input.InputActivity" />
         <activity android:name=".ui.activity.setting.AccountManagementActivity" />
         <activity android:name=".ui.activity.setting.TagActivity" />
         <activity android:name=".ui.activity.setting.FolderActivity" />
