--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,7 @@ dependencies {
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
     //dialog
     implementation 'com.afollestad.material-dialogs:core:3.3.0'
+    implementation 'com.afollestad.material-dialogs:input:3.3.0'
     // GreenDao
     implementation 'org.greenrobot:greendao:3.3.0'
 
