--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.edit.EditDeleteActivity"></activity>
+        <activity android:name=".ui.activity.categoryitem.CategoryItemActivity"></activity>
+        <activity android:name=".ui.activity.edit.EditDeleteActivity" />
         <activity android:name=".ui.activity.input.InputActivity" />
         <activity android:name=".ui.activity.setting.AccountManagementActivity" />
         <activity android:name=".ui.activity.setting.TagActivity" />
