--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
@@ -37,9 +36,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.categoryitem.CategoryItemActivity"></activity>
+        <activity android:name=".ui.activity.categoryitem.CategoryItemActivity" />
         <activity android:name=".ui.activity.edit.EditDeleteActivity" />
-        <activity android:name=".ui.activity.input.InputActivity" />
+        <activity
+            android:name=".ui.activity.input.InputActivity"
+            android:windowSoftInputMode="adjustPan|stateHidden"
+         />
         <activity android:name=".ui.activity.setting.AccountManagementActivity" />
         <activity android:name=".ui.activity.setting.TagActivity" />
         <activity android:name=".ui.activity.setting.folder.FolderActivity" />
