--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.activity.video.VideoActivity"></activity>
+        <activity android:name=".ui.activity.web.WebActivity" />
         <activity android:name=".ui.activity.categoryitem.CategoryItemActivity" />
         <activity android:name=".ui.activity.edit.EditDeleteActivity" />
         <activity
@@ -53,17 +55,10 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!--process多进程模式开启，name为进程名，默认进程名是包名-->
-        <activity
-            android:name=".ui.activity.MainActivity">
-
-        </activity>
-
+        </activity> <!-- process多进程模式开启，name为进程名，默认进程名是包名 -->
+        <activity android:name=".ui.activity.MainActivity" />
     </application>
 
 </manifest>
